helm/values/kuberay/ray-cluster/on-demand-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: on-demand-service
  namespace: ray-system
spec:
  selector:
    ray.io/group: on-demand-nodes
  ports:
    - protocol: TCP
      port: 1122
      targetPort: 1122
