helm/values/kuberay/ray-cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-pod-service
spec:
  selector:
    ray.io/node-type: worker
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 1234
