helm/values/kuberay/ray-cluster/on-demand-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: volga-on-demand-ingress
  namespace: ray-system
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0875b1951471ddede,subnet-0e385e00f0b80e03f
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /on_demand_compute
            pathType: Prefix
            backend:
              service:
                name: on-demand-service-external
                port:
                  number: 1122
